--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,10 @@
     <string name="cancel_cn">取消</string>
     <string name="addUser_cn">新增用户</string>
 
+
+
+    <string name="rental_codeNumber_cn">证件号码:</string>
+
+    <string name="remark_cn">备注</string>
+
 </resources>
